backend/src/snapshots/twirl__test__test-3.snap
---
source: src/test.rs
---
White plays at (0, 0)... => Err(PieceAlreadyThere)
                                                                                                                
╶─[1m[96m→[22m01[39;49m ╶──┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐     ╶─[1m[96m→[22m01[39;49m ╶──┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘        └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘   
                                                                                                                
[0m   White to play...                                      [0m   White to play...
