backend/src/snapshots/twirl__test__test-7.snap
---
source: src/test.rs
---
Black plays at (0, 3)... => Ok(None)
                           │                                                        │                           
╶──┬─────┬─────┬─────┬────[1m[96m↓[22m01[39;49m ╶──┬─────┬─────┬─────┐     ╶──┬─────┬─────┬────[1m[96m↑[22m03[39;49m───[1m[96m↓[22m01[39;49m ╶──┬─────┬─────┬─────┐   
   │     │     │     │           │     │     │     │        │     │     │     │           │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼────[1m[93m→[22m02[39;49m ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼────[1m[93m→[22m02[39;49m ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘        └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘   
                                                                                                                
[0m   Black to play...                                      [0m   Black to spin...
