backend/src/snapshots/twirl__test__test-8.snap
---
source: src/test.rs
---
Black spins from (0, 3) 2 tile CCW... => Ok(Some(BlackWin))
                           │                                                                                    
╶──┬─────┬─────┬────[1m[96m↑[22m03[39;49m───[1m[96m↓[22m01[39;49m ╶──┬─────┬─────┬─────┐     ╶──┬─────┬─────┬────[1m[106;30m→[22m01[39;49m ╶─[1m[93m↑[22m02[39;49m────┬─────┬─────┬─────┐   
   │     │     │     │           │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼────[1m[93m→[22m02[39;49m ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼──╴ [1m[106;30m←[22m03[39;49m────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤     ╶──┼─────┼─────┼─────┼─────┤  ╶──┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘        └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘   
                                                                                                                
[0m   Black to spin...                                      [0m   Black wins!
